# mcfg_parser

./: README.md  conftest.py  pyproject.toml
src/mcfg_parser_aditya_dan/: grammar.py  parser.py  tree.py
src/mcfg_parser_aditya_dan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_grammar.py  test_parser.py  test_tree.py
