[project]
name = "mcfg_parser_aditya_dan"
version = "0.0.1"
authors = [
  { name="Aditya Dan", email="danaditya98@gmail.com" },
]
description = "Agenda-based MCFG Parser"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/aditya-dan/mcfg_parser"
